# exit-options

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  \  build.sh  common.h  exit-options.conf  exit-options.pro  exit-options.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
.github/workflows/: release.yaml
.obs/: worflows.yml  workflows.yml
configs_alt/: README  adwaita_exit-options.conf  awesome-comfort-circle_exit-options.conf  awesome-comfort_exit-options.conf  awesome-reverse_exit-options.conf  awesome_exit-options.conf  black-white-exit-options.conf  buuf.conf  papirus_exit-options.conf  square-comfort-exit-options.conf  square-comfort_exit-options.conf
debian/: changelog  control  copyright  install  rules
debs/: exit-options.dsc  exit-options_21.1.01.dsc  exit-options_21.1.01.tar.xz  exit-options_21.1.01_amd64.changes  exit-options_21.1.01_amd64.deb  exit-options_21.1.01_armhf.deb  exit-options_21.1.01_i386.deb  exit-options_21.1.02.dsc  exit-options_21.1.02.tar.xz  exit-options_21.1.02_amd64.changes  exit-options_21.1.02_amd64.deb  exit-options_21.1.02_armhf.deb  exit-options_21.1.02_i386.deb  exit-options_21.1.dsc  exit-options_21.1.tar.xz  exit-options_21.1_amd64.changes  exit-options_21.1_amd64.deb  exit-options_21.1_armhf.deb  exit-options_21.1_i386.deb  exit-options_22.12.dsc  exit-options_22.12.tar.xz  exit-options_22.12_amd64.changes  exit-options_22.12_amd64.deb  exit-options_22.12_armhf.deb  exit-options_22.12_i386.changes  exit-options_22.12_i386.deb  exit-options_22.12_source.changes  exit-options_23.1.dsc  exit-options_23.1.tar.xz  exit-options_23.1_amd64.changes  exit-options_23.1_amd64.deb  exit-options_23.1_armhf.deb  exit-options_23.1_i386.changes  exit-options_23.1_i386.deb  exit-options_23.1_source.changes  exit-options_23.2.01.dsc  exit-options_23.2.01.tar.xz  exit-options_23.2.01_amd64.changes  exit-options_23.2.01_amd64.deb  exit-options_23.2.01_armhf.deb  (+139 more)
translations/: exit-options_af.ts  exit-options_am.ts  exit-options_ar.ts  exit-options_ast.ts  exit-options_be.ts  exit-options_bg.ts  exit-options_bn.ts  exit-options_bs.ts  exit-options_bs_BA.ts  exit-options_ca.ts  exit-options_ceb.ts  exit-options_co.ts  exit-options_cs.ts  exit-options_cy.ts  exit-options_da.ts  exit-options_de.ts  exit-options_el.ts  exit-options_en.ts  exit-options_en_GB.ts  exit-options_en_US.ts  exit-options_eo.ts  exit-options_es.ts  exit-options_es_ES.ts  exit-options_et.ts  exit-options_eu.ts  exit-options_fa.ts  exit-options_fi.ts  exit-options_fi_FI.ts  exit-options_fil.ts  exit-options_fil_PH.ts  exit-options_fr.ts  exit-options_fr_BE.ts  exit-options_fr_FR.ts  exit-options_fy.ts  exit-options_ga.ts  exit-options_gd.ts  exit-options_gl.ts  exit-options_gl_ES.ts  exit-options_gu.ts  exit-options_ha.ts  (+88 more)
